// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ViewManagerAdapter_ExpoLinearGradient
  colors={
    [
      4278216447,
      4278249075,
    ]
  }
  endPoint={
    [
      1,
      1,
    ]
  }
  startPoint={
    [
      0,
      0.2,
    ]
  }
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "height": "100%",
      "margin": 0,
      "padding": 0,
      "width": "100%",
    }
  }
>
  <RCTSafeAreaView
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "height": "100%",
        "margin": 0,
        "padding": 0,
        "width": "100%",
      }
    }
  >
    <Image
      source={1}
      style={
        {
          "aspectRatio": 2.7985865724381624,
          "flex": 0.25,
          "marginBottom": "10%",
          "marginTop": 20,
          "width": "100%",
        }
      }
    />
    <Text
      style={
        {
          "color": "white",
          "fontSize": 32,
          "fontWeight": "bold",
        }
      }
    >
      Waste Watcher
    </Text>
    <Text
      style={
        {
          "color": "white",
          "fontSize": 24,
          "marginBottom": "10%",
        }
      }
    >
      Track n' Reduce Food Waste
    </Text>
    <TextInput
      cursorColor="white"
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      placeholderTextColor="#fff"
      selectionColor="white"
      style={
        [
          {
            "backgroundColor": "rgba(255, 255, 255, 0.25)",
            "borderRadius": 7,
            "fontSize": 15,
            "height": 50,
            "margin": 8,
            "paddingLeft": 15,
            "width": "85%",
          },
          {
            "color": "#fff",
          },
        ]
      }
    />
    <TextInput
      cursorColor="white"
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="#fff"
      secureTextEntry={true}
      selectionColor="white"
      style={
        [
          {
            "backgroundColor": "rgba(255, 255, 255, 0.25)",
            "borderRadius": 7,
            "fontSize": 15,
            "height": 50,
            "margin": 8,
            "paddingLeft": 15,
            "width": "85%",
          },
          {
            "color": "#fff",
          },
        ]
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderColor": "rgba(255, 255, 255, 0.25)",
            "borderRadius": 7,
            "borderWidth": 3,
            "height": 50,
            "justifyContent": "space-evenly",
            "margin": 8,
            "width": "85%",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "white",
            "fontSize": 15,
            "fontWeight": "bold",
          }
        }
      >
        Log In
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderColor": "rgba(255, 255, 255, 0.25)",
            "borderRadius": 7,
            "borderWidth": 3,
            "height": 50,
            "justifyContent": "space-evenly",
            "margin": 8,
            "width": "85%",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "white",
            "fontSize": 15,
            "fontWeight": "bold",
          }
        }
      >
        Bypass Log In
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderRadius": 7,
            "height": 30,
            "justifyContent": "center",
            "marginTop": 3,
            "paddingTop": 0,
            "width": "85%",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "white",
          }
        }
      >
        Forgot your login details? 
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Get help signing in.
        </Text>
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 16,
          "marginBottom": 15,
          "marginTop": 15,
        }
      }
    >
      OR
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.25)",
          "borderRadius": 7,
          "flexDirection": "row",
          "fontSize": 15,
          "height": 50,
          "justifyContent": "center",
          "width": "85%",
        }
      }
    >
      <Text />
      <Text
        style={
          {
            "color": "white",
            "fontWeight": "bold",
            "paddingLeft": 8,
          }
        }
      >
        Sign in with Google
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderRadius": 7,
            "height": 50,
            "justifyContent": "center",
            "marginTop": 10,
            "paddingTop": 0,
            "width": "85%",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "white",
          }
        }
      >
        Dont have an account? 
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Sign up
        </Text>
      </Text>
    </View>
  </RCTSafeAreaView>
</ViewManagerAdapter_ExpoLinearGradient>
`;

exports[`renders correctly 2`] = `
<ViewManagerAdapter_ExpoLinearGradient
  colors={
    [
      4278216447,
      4278249075,
    ]
  }
  endPoint={
    [
      1,
      1,
    ]
  }
  startPoint={
    [
      0,
      0.2,
    ]
  }
  style={
    {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
          "flexDirection": "column",
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "backgroundColor": "rgba(0,0,0,0)",
            },
            {
              "alignSelf": "flex-start",
              "borderRadius": 14,
              "margin": 10,
              "marginTop": 40,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 40,
              "paddingBottom": 20,
              "paddingLeft": 25,
              "paddingRight": 25,
              "paddingTop": 20,
            }
          }
        >
          ×
        </Text>
      </View>
      <Text
        style={
          {
            "alignItems": "center",
            "color": "white",
            "fontSize": 35,
            "justifyContent": "center",
          }
        }
      >
        Forgot Password?
      </Text>
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 15,
            "marginBottom": 15,
            "marginTop": 80,
            "width": "80%",
          }
        }
      >
        Please enter your email and we'll send you an email with a link to reset your password.
      </Text>
      <TextInput
        cursorColor="white"
        onChangeText={[Function]}
        onEndEditing={[Function]}
        placeholder="example@gmail.com"
        placeholderTextColor="#fff"
        selectionColor="white"
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.25)",
              "borderRadius": 7,
              "fontSize": 15,
              "height": 50,
              "marginBottom": 8,
              "paddingLeft": 15,
              "width": "85%",
            },
            {
              "color": "#fff",
            },
          ]
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "backgroundColor": "rgba(0,0,0,0)",
            },
            {
              "alignItems": "center",
              "borderColor": "rgba(255, 255, 255, 0.25)",
              "borderRadius": 7,
              "borderWidth": 3,
              "height": 50,
              "justifyContent": "space-evenly",
              "margin": 8,
              "width": "85%",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "white",
              "fontSize": 15,
            }
          }
        >
          Reset Password
        </Text>
      </View>
    </View>
  </View>
</ViewManagerAdapter_ExpoLinearGradient>
`;

exports[`renders correctly 3`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 0,
        "elevation": 10,
        "height": "20%",
        "justifyContent": "center",
        "marginBottom": 20,
        "marginTop": "0%",
        "shadowColor": "#0066ff",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 8,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginTop": "2.5%",
        }
      }
    >
      <Image
        source={1}
        style={
          {
            "height": 50,
            "width": 50,
          }
        }
      />
    </View>
    <Text
      style={
        {
          "fontSize": 20,
          "fontWeight": "bold",
          "marginVertical": "1%",
        }
      }
    >
      Frank Pug
    </Text>
    <Text
      style={
        {
          "color": "#474747",
          "fontSize": 16,
          "marginBottom": "5%",
        }
      }
    >
      frankdapug
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
        "height": "100%",
        "marginTop": "5%",
        "width": "100%",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "rgba(255, 255, 255, 0.75)",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "13%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "7.5%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 35,
              "width": 35,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          Notifications
        </Text>
        <Text
          style={
            {
              "color": "#474747",
              "fontSize": 13,
              "marginRight": "10%",
            }
          }
        >
          No new messages
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "rgba(255, 255, 255, 0.75)",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "13%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "7.5%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 35,
              "width": 35,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          Friends
        </Text>
        <Text
          style={
            {
              "color": "#474747",
              "fontSize": 13,
              "marginRight": "10%",
            }
          }
        >
          View and invite friends
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "rgba(255, 255, 255, 0.75)",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "13%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "7.5%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 35,
              "width": 35,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          Streak
        </Text>
        <Text
          style={
            {
              "color": "#474747",
              "fontSize": 13,
              "marginRight": "10%",
            }
          }
        >
          Track daily, earn rewards
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "rgba(255, 255, 255, 0.75)",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "13%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "7.5%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 35,
              "width": 35,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          My Badges
        </Text>
        <Text
          style={
            {
              "color": "#474747",
              "fontSize": 13,
              "marginRight": "10%",
            }
          }
        >
          Earn badges, complete goals
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "rgba(255, 255, 255, 0.75)",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "13%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "7.5%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 35,
              "width": 35,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          Settings
        </Text>
        <Text
          style={
            {
              "color": "#474747",
              "fontSize": 13,
              "marginRight": "10%",
            }
          }
        >
          Edit your account info
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "rgba(255, 255, 255, 0.75)",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "13%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "7.5%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 35,
              "width": 35,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          Refer a Friend
        </Text>
        <Text
          style={
            {
              "color": "#474747",
              "fontSize": 13,
              "marginRight": "10%",
            }
          }
        >
          Connect and track together
        </Text>
      </View>
    </View>
  </View>
</View>
`;
